# nvml-go-bazel

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  main.go
