module(
    name = "test",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_go", version = "0.55.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_nvidia_go_nvml")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.3",
)
use_repo(
    go_sdk,
    "go_sdk",
)
